--- a/Motorcycle/appsettings.json
+++ b/Motorcycle/appsettings.json
@@ -8,6 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "conexion": "Server=LAPTOP-ACC84CPV\\SQLEXPRESS;Database=Motorcycle;Integrated Security=true;TrustServerCertificate=True;"
+  },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 25,
+    "Username": "bermudezsmuel@gmail.com",
+    "Password": "Negra251300*()*"
   }
+
 }
 
